--- a/backend/Properties/launchSettings.json
+++ b/backend/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "BbmDailyReport": {
+    "FjDailyReport": {
       "commandName": "Project",
       "launchBrowser": false,
       "environmentVariables": {
