--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,10 @@
   },
   "AllowedHosts": "*",
   "FE_URL": "http://localhost:3001",
+  "DBType": "sqlite",
+  "ConnectionStrings": {
+    "AppDB": "Data Source=./AppData/app.db"
+  },
   "JwtValidPeriod": "1.00:00:00",
   "JwtSecretKey": "your-super-secret-jwt-key-here-at-least-32-characters-long",
   "Keycloak": {
