--- a/backend/appsettings.Development.json
+++ b/backend/appsettings.Development.json
@@ -2,5 +2,13 @@
   "DBType": "sqlite",
   "ConnectionStrings": {
     "AppDB": "Data Source=./AppData/app.db"
+  },
+  "FE_URL": "http://localhost:3001",
+  "JwtValidPeriod": "1.00:00:00",
+  "JwtSecretKey": "your-super-secret-jwt-key-here-at-least-32-characters-long",
+  "Keycloak": {
+    "WellKnown": "https://******.******.cc/realms/***/well-known/openid-configuration",
+    "ClientId": "***-******",
+    "ClientSecret": "********************************"
   }
 }
