--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FE_URL": "http://localhost:3001",
+  "DBType": "sqlite",
+  "ConnectionStrings": {
+    "AppDB": "Data Source=./AppData/app.db"
+  },
+  "JwtValidPeriod": "1.00:00:00",
+  "JwtSecretKey": "your-super-secret-jwt-key-here-at-least-32-characters-long",
+  "Keycloak": {
+    "WellKnown": "https://******.******.cc/realms/***/well-known/openid-configuration",
+    "ClientId": "***-******",
+    "ClientSecret": "********************************"
+  }
 }
